Collection tree panel bugfixes, better keyboard support, more localizations.

--- a/src/net/grabsalot/i18n/lang_en.properties
+++ b/src/net/grabsalot/i18n/lang_en.properties
@@ -1,50 +1,52 @@
 Application.Title=Grabsalot!
-LoadFrame.Title=Choose the working path
-BrowseButtonText=Browse...
-ConfigFrame.10=Processing
-ConfigFrame.14=\ as
-ConfigFrame.15=The selected directory contains
+LoadDialog.Title=Choose the working path
+BrowseButton.Label=Browse...
+LoadProgress.ProcessingAs=Processing {0} as {1}
+LoadProgress.InvalidDataWarning=The selected directory contains {0} information.\n Are you sure you want to process it as {1}?
 WorkingMode.Artist=artist
 WorkingMode.Album=album
 WorkingMode.Collection=collection
-ConfigFrame.19=\ information.\n Are you sure you want to process it as collection?
-ConfigFrame.2=Collection
-ConfigFrame.20=This is strange
-ConfigFrame.3=Artist
-ConfigFrame.4=Album
-WorkingModeText=Process as:
-ShowThisOnStartup=Hide this dialog on next startup.
-LoadButtonText=Load...
-ConfigFrame.8=Invalid source path specified
-ConfigFrame.9=Error
+WorkingMode.Text=Process as:
+LoadButton.Label=Load...
+LoadProgress.InvalidSourcePath=Invalid source path specified
+generic.error=Error
 InfoPanel.SelectionEmpty=Select an item from the collection tree
 StatusText.Idle=Ready.
 StatusText.ArtistLoading=Loading artist information
-Menu.File=File
-Menu.Load=Load...
-Menu.View=View
-Menu.Tools=Tools
-Menu.Help=Help
-Menu.About=About
-Menu.Languages=Languages
-Menu.View.ShowGenreStats=Show genre statistics
-Menu.View.ShowSizeStats=Show file size statistics
-
-Menu.HideConfig=Hide configuration dialog
-Menu.Settings=Settings
-Menu.Rules=Rules
-Menu.Restart=Restart
-Menu.View.DetailView=Item details view
+menu.file=File
+menu.load=Load...
+menu.view=View
+menu.tools=Tools
+menu.help=Help
+menu.about=About
+menu.languages=Languages
+menu.settings=Settings
+menu.rules=Rules
+menu.restart=Restart
+menu.detailView=Item details view
+menu.options=Options
 DetailViewMode.Details=Details
 DetailViewMode.List=List
 DetailViewMode.InfoPanels=Info panels
 DetailViewMode.ServicePage=Service page
-Menu.Options=Options
-
-Language.en=English
-Language.de=German
-Language.hu=Hungarian
-Language.ro=Romanian
-
+language.en=English
+language.de=German
+language.hu=Hungarian
+language.ro=Romanian
 ErrorDialog.Title=An error occured
 Error.FailedToStartApplication=Failed to start application, due to a serious error: {0}
+
+config.loadLastOnStartup=Load last used path on next startup.
+config.unloadOthers=Unload currently loaded collections.
+
+collectionMenu.rename=Rename...
+collectionMenu.saveAlbumArt=Save album art
+collectionMenu.saveAllAlbumArts=Save all album arts
+collectionMenu.saveMetadata=Save metadata
+collectionMenu.playTrack=Play this track
+collectionMenu.enqueueTrack=Enqueue this track
+collectionMenu.playAllAlbums=Play all albums
+collectionMenu.playThisAlbum=Play this album
+collectionMenu.expandChildren=Expand children
+collectionMenu.expandAll=Expand all children
+collectionMenu.saveAllMetadata=Save all metadata
